--- a/IntelliJ HTML.html
+++ b/IntelliJ HTML.html
@@ -159,7 +159,7 @@ this.handleClick = this.handleClick.bind(this)<br />
 &nbsp;&nbsp;&nbsp;&nbsp;);<br />
 &nbsp;&nbsp;}<br />
 };<br />
-<a style="color: rgb(231, 190, 85);" href="Main HTML.html">click here to return to main page</a>
+<a style="color: rgb(231, 190, 85);" href="index.html">click here to return to main page</a>
 </div>
 
 <div id="bottom-bar-one" class="window-text">
