--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <head>
-<h1>Welcome to nick burch page</h1>
+<h1>I am Nicholas Burch</h1>
+<h2>Man against Time!</h2>
 </head>
 
 <body>
 
 <div>
-just some text to distinguish div elements
+I like coding, playing and writing music, reading books, and baking cake.</ br>
+That last one is a lie.
 </div>
 
-<a href="IntelliJ HTML.html">intelli j website click here</a>
+<div>
+<a href="IntelliJ HTML.html">Click here for my "IntelliJ Code Editor" project</a></ br>
+This project demonstrates:<ul>
+<li>Responsive Web Design</li>
+<li>Grid Regimentation</li>
+<li>Color and Font Specific Boxes</li>
+</ul>
+</div>
 
+<div>
+<a href="#">Click here for my "Escape The Room" game</a>
+</div>
+<div>fin</div>
 </body>
