--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <div>
 I like coding, playing and writing music, reading books, and baking cake.</ br>
-That last one is a lie.
+That last one is a lie.</br>
 </div>
 
 <div>
@@ -20,7 +20,10 @@ This project demonstrates:<ul>
 </div>
 
 <div>
-<a href="#">Click here for my "Escape The Room" game</a>
+<a href="#">Click here for my "Escape The Room" game</a></ br>
 </div>
-<div>fin</div>
+
+<div>
+fin
+</div>
 </body>
