--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <head>
+<link href="styles2.css" rel="stylesheet" type="text/css">
 <h1>I am Nicholas Burch</h1>
 <h2>Man against Time!</h2>
 </head>
 
 <body>
 
-<div>
+<div id="top-banner">
 I like coding, playing and writing music, reading books, and baking cake.</br>
 That last one is a lie.</br>
 </div>
 
+<div id="display-box">
 <div>
 <a href="IntelliJ HTML.html">Click here for my "IntelliJ Code Editor" project</a></br>
 This project demonstrates:<ul>
@@ -26,4 +28,6 @@ This project demonstrates:<ul>
 <div>
 fin
 </div>
+</div>
+
 </body>
