--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@ I like coding, playing and writing music, reading books, and baking cake.</br>
 That last one is a lie.</br>
 </div>
 
+<div id="left-sidebar">
+left sidebar</br>
+left sidebar</br>
+left sidebar</br>
+left sidebar</br>
+left sidebar</br>
+</div>
+
 <div id="display-box">
 <div>
 <a href="IntelliJ HTML.html">Click here for my "IntelliJ Code Editor" project</a></br>
