--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ This project demonstrates:<ul>
 </div>
 
 <div>
-<a href="#">Click here for my "Escape The Room" game</a></br>
+<a href="game.html">Click here for my "Escape The Room" game</a></br>
 </div>
 
 <div>
