first room complete
besides aesthetics is fully functional

--- a/game.html
+++ b/game.html
@@ -9,10 +9,13 @@
 <body>
 
   <!-- <script src="graphics.js"></script> -->
-
+<div id="game-box">
   <script src="game.js">
   </script>
+</div>
 
+<div id="data-box">
+</div>
 
 <!--need to create a small box where the array is contained so the whole screen doesn't clear-->
 
