added svg library script

--- a/game.html
+++ b/game.html
@@ -1,25 +1,18 @@
 <html>
-<head>
-  <link href="gamestyles.css" rel="stylesheet" type="text/css">
-  <meta charset="utf-8">
-</head>
+  <head>
+    <link href="gamestyles.css" rel="stylesheet" type="text/css" />
+    <meta charset="utf-8" />
+  </head>
 
-  <a href="index.html">go back to main page</a><br>
+  <a href="index.html">go back to main page</a
+  ><br />
 
-<body>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
+    <div id="game-box">
+      <script src="game.js"></script>
+    </div>
 
-  <!-- <script src="graphics.js"></script> -->
-<div id="game-box">
-  <script src="game.js">
-  </script>
-</div>
-
-<div id="data-box">
-</div>
-
-<!--need to create a small box where the array is contained so the whole screen doesn't clear-->
-
-</body>
-
-
+    <div id="data-box"></div>
+  </body>
 </html>
