change from ascii to pixels

--- a/game.html
+++ b/game.html
@@ -8,11 +8,8 @@
   ><br />
 
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/@svgdotjs/svg.js@3.0/dist/svg.min.js"></script>
-    <div id="game-box">
-      <script src="game.js"></script>
-    </div>
-
-    <div id="data-box"></div>
+    <div id="game"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/2.3.6/svg.min.js"></script>
+    <script src="game.js"></script>
   </body>
 </html>
