--- a/index.html
+++ b/index.html
@@ -1,41 +1,30 @@
 <head>
 <link href="styles2.css" rel="stylesheet" type="text/css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
 <div id="top-banner">
-<h1>I am Nicholas Burch</h1>
-<h2>Man against Time!</h2>
-I like coding, playing and writing music, reading books, and baking cake.</br>
-That last one is a lie.</br>
+<div id="top-banner-1">Nicholas Burch's Super Magnificent Website Extravaganza 2.0</div>
+<div id="top-banner-2">
+<div id="top-banner-2-1"></div>
+<div id="top-banner-2-2"></div>
+<div id="top-banner-2-3"></div>
+</div>
 </div>
 
-<div id="left-sidebar">
-left sidebar</br>
-left sidebar</br>
-left sidebar</br>
-left sidebar</br>
-left sidebar</br>
+<div id="left-banner">
+Projects:</br>
+<a style="color: white;"  href="game.html">Escape The Room Game</a>
+</br></br>
+<a style="color: white;" href="IntelliJ HTML.html">IntelliJ Code Editor CSS Model</a></br></br>
 </div>
 
-<div id="display-box">
-<div>
-<a href="IntelliJ HTML.html">Click here for my "IntelliJ Code Editor" project</a></br>
-This project demonstrates:<ul>
-<li>Responsive Web Design</li>
-<li>Grid Regimentation</li>
-<li>Color and Font Specific Boxes</li>
-</ul>
-</div>
+<div id="text-box">
+<div id="text">Welcome to my blog of jazz, cooking, fitness, and learning about whatever I learn about.</div>
 
-<div>
-<a href="game.html">Click here for my "Escape The Room" game</a></br>
-</div>
-
-<div>
-fin
-</div>
+<div id="bottom-banner">last updated: 12/17/2020</div>
 </div>
 
 </body>
