--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <div id="top-banner">
 <div id="top-banner-1">Nicholas Burch's Super Magnificent Website Extravaganza 2.0</div>
 <div id="top-banner-2">
-<div id="top-banner-2-1"></div>
-<div id="top-banner-2-2"></div>
-<div id="top-banner-2-3"></div>
+<div id="top-banner-2-1">J A Z Z</div>
+<div id="top-banner-2-2">C O O K I N G</div>
+<div id="top-banner-2-3">L E A R N I N G</div>
+<div id="top-banner-2-4">B L O G</div>
 </div>
 </div>
 
@@ -22,9 +23,33 @@ Projects:</br>
 </div>
 
 <div id="text-box">
-<div id="text">Welcome to my blog of jazz, cooking, fitness, and learning about whatever I learn about.</div>
-
-<div id="bottom-banner">last updated: 12/17/2020</div>
+Welcome to my blog of jazz, cooking, fitness, and learning about whatever I learn about.
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
+1</br>
 </div>
+
+
+
+<div id="bottom-banner">last updated: 12/17/2020 </div>
 
 </body>
