Added a ton of stuff

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<link href="styles2.css" rel="stylesheet" type="text/css">
+<link href="index.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -8,10 +8,10 @@
 <div id="top-banner">
 <div id="top-banner-1">Nicholas Burch's Super Magnificent Website Extravaganza 2.0</div>
 <div id="top-banner-2">
-<div id="top-banner-2-1">J A Z Z</div>
-<div id="top-banner-2-2">C O O K I N G</div>
-<div id="top-banner-2-3">L E A R N I N G</div>
-<div id="top-banner-2-4">B L O G</div>
+<button type="button" id="top-banner-2-button-1" onclick="window.location.href='jazz.html'">J A Z Z</button>
+<button type="button" id="top-banner-2-button-2" onclick="window.location.href='cooking.html'">C O O K I N G</button>
+<button type="button" id="top-banner-2-button-3" onclick="window.location.href='learning.html'">L E A R N I N G</button>
+<button type="button" id="top-banner-2-button-4" onclick="window.location.href='blogposts.html'">B L O G P O S T S</button>
 </div>
 </div>
 
@@ -19,37 +19,25 @@
 Projects:</br>
 <a style="color: white;"  href="game.html">Escape The Room Game</a>
 </br></br>
-<a style="color: white;" href="IntelliJ HTML.html">IntelliJ Code Editor CSS Model</a></br></br>
+<a style="color: white;" href="IntelliJ HTML.html">IntelliJ Code Editor CSS Model</a>
+</br></br>
+<a style="color: white;" href="landing_page.html">Simple Landing Page Design</a>
+</br></br>
 </div>
 
 <div id="text-box">
 Welcome to my blog of jazz, cooking, fitness, and learning about whatever I learn about.
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
-1</br>
+<hr>
+<p>A little bit about me:
+I grew up in Southern California playing video games, eating In-N-Out, and being stupid.
+I went to compulsory education in the cities of Thousand Oaks and Moorpark.
+The weather there is supremely nice practically all year round.
+After graduating high school in 2016, I attended Moorpark College to study math, philosophy, and music for 4 years.
+The lockdowns came during my first semester at UCI and so I left to Texas to move out of my MOM's house to live on my own.</p>
 </div>
 
 
-
-<div id="bottom-banner">last updated: 12/17/2020 </div>
+<!--I wonder if I can automate this-->
+<div id="bottom-banner">last updated: 12/19/2020</div>
 
 </body>
