--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 <link href="index.css" rel="stylesheet" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
 </head>
 
 <body>
@@ -8,10 +9,10 @@
 <div id="top-banner">
 <div id="top-banner-1">Nicholas Burch's Super Magnificent Website Extravaganza 2.0</div>
 <div id="top-banner-2">
-<button type="button" id="top-banner-2-button-1" onclick="window.location.href='jazz.html'">J A Z Z</button>
-<button type="button" id="top-banner-2-button-2" onclick="window.location.href='cooking.html'">C O O K I N G</button>
-<button type="button" id="top-banner-2-button-3" onclick="window.location.href='learning.html'">L E A R N I N G</button>
-<button type="button" id="top-banner-2-button-4" onclick="window.location.href='blogposts.html'">B L O G P O S T S</button>
+<button type="button" id="top-banner-2-button-1" onclick="window.location.href='index.html'">H O M E</button>
+<button type="button" id="top-banner-2-button-2" onclick="window.location.href='jazz.html'">J A Z Z</button>
+<button type="button" id="top-banner-2-button-3" onclick="window.location.href='cooking.html'">C O O K I N G</button>
+<button type="button" id="top-banner-2-button-4" onclick="window.location.href='learning.html'">L E A R N I N G</button>
 </div>
 </div>
 
