--- a/learning.html
+++ b/learning.html
@@ -8,10 +8,10 @@
     <div id="top-banner">
     <div id="top-banner-1">Nicholas Burch's Super Magnificent Website Extravaganza 2.0</div>
     <div id="top-banner-2">
-        <button type="button" id="top-banner-2-button-1" onclick="window.location.href='jazz.html'">J A Z Z</button>
-        <button type="button" id="top-banner-2-button-2" onclick="window.location.href='cooking.html'">C O O K I N G</button>
-        <button type="button" id="top-banner-2-button-3" onclick="window.location.href='index.html'">H O M E</button>
-        <button type="button" id="top-banner-2-button-4" onclick="window.location.href='blogposts.html'">B L O G P O S T S</button>
+        <button type="button" id="top-banner-2-button-1" onclick="window.location.href='index.html'">H O M E</button>
+        <button type="button" id="top-banner-2-button-2" onclick="window.location.href='jazz.html'">J A Z Z</button>
+        <button type="button" id="top-banner-2-button-3" onclick="window.location.href='cooking.html'">C O O K I N G</button>
+        <button type="button" id="top-banner-2-button-4" onclick="window.location.href='learning.html'">L E A R N I N G</button>
     </div>
     </div>
     
