--- a/landing_page.html
+++ b/landing_page.html
@@ -7,7 +7,7 @@
     <div id="top-banner-left">
       <div id="top-banner-item">
         T I T L E
-        <a style="color: rgb(231, 190, 85)" href="index.html">
+        <a style="color: rgb(231, 190, 85)" href="index_bootstrap.html">
           click here to return to main page
         </a>
       </div>
