improved and simplified

--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
 
   <div id="game">
     <div id="data-box">
-      <a href="index_bootstrap.html">return to home</a>
+      <a href="index.html">return to home</a>
       <hr />
       HOW TO PLAY<br />
       MOVE - WASD<br />
