--- a/landing_page.html
+++ b/landing_page.html
@@ -7,7 +7,7 @@
     <div id="top-banner-left">
       <div id="top-banner-item">
         T I T L E
-        <a style="color: rgb(231, 190, 85)" href="index_bootstrap.html">
+        <a style="color: rgb(231, 190, 85)" href="index.html">
           click here to return to main page
         </a>
       </div>
@@ -41,24 +41,9 @@
     </div>
     <div id="image-carousel-right">
       <div id="image-carousel-right-image">
-        <img
-          id="image"
-          src="landing_page/image 1.jpg"
-          width="200"
-          height="200"
-        />
-        <img
-          id="image"
-          src="landing_page/image 3.jpg"
-          width="200"
-          height="200"
-        />
-        <img
-          id="image"
-          src="landing_page/image 5.jpg"
-          width="200"
-          height="200"
-        />
+        <img id="image" src="images/image 1.jpg" width="200" height="200" />
+        <img id="image" src="images/image 3.jpg" width="200" height="200" />
+        <img id="image" src="images/image 5.jpg" width="200" height="200" />
       </div>
       <div id="image-carousel-right-buttons">buttons</div>
     </div>
@@ -81,11 +66,11 @@
     </div>
   </div>
   <div id="image-collage">
-    <img id="image" src="landing_page/image 1.jpg" width="200" height="200" />
-    <img id="image" src="landing_page/image 2.jpg" width="200" height="200" />
-    <img id="image" src="landing_page/image 3.jpg" width="200" height="200" />
-    <img id="image" src="landing_page/image 4.jpg" width="200" height="200" />
-    <img id="image" src="landing_page/image 5.jpg" width="200" height="200" />
+    <img id="image" src="images/image 1.jpg" width="200" height="200" />
+    <img id="image" src="images/image 2.jpg" width="200" height="200" />
+    <img id="image" src="images/image 3.jpg" width="200" height="200" />
+    <img id="image" src="images/image 4.jpg" width="200" height="200" />
+    <img id="image" src="images/image 5.jpg" width="200" height="200" />
   </div>
   <div id="about-section">
     <h4>About</h4>
