updated landing page preview image

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="col-*-12">
                 <img
                   class="img-responsive"
-                  src="images/image 3.jpg"
+                  src="images/landing_page.JPG"
                   id="content-image"
                 />
               </div>
