--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
           <a href="https://mtcapra.com/product/goat-milk-cream-capra-cream/" class="btn btn-default btn-block col-*-*" id="left-banner-button">Goat Milk Cream Powder</a>
         </div>
         <br>
+        <div class="row">
+          <a href="bitcoinsafe.html" class="btn btn-default btn-block col-*-*" id="left-banner-button">Bitcoinsafe.com</a>
+        </div>
+        <br>
       </div>
 
       <div class="col-xs-10" id="main">
