--- a/bitcoinsafe.html
+++ b/bitcoinsafe.html
@@ -1,9 +1,14 @@
 <head>
-  <link rel="stylesheet" type="text/css" href="index.css" media="screen" />
+  <link
+    rel="stylesheet"
+    type="text/css"
+    href="bitcoinsafe.css"
+    media="screen"
+  />
 </head>
 <body>
   <div class="App">
-    <script src="index.js"></script>
+    <script src="bitcoinsafe.js"></script>
     <div id="first-page">
       <div>bitcoinsafe</div>
       <br />
