--- a/bitcoinsafe.html
+++ b/bitcoinsafe.html
@@ -46,6 +46,7 @@
     </div>
 
     <div class="second-page" id="second-page" hidden>
+      <button id="return" onclick="handleReturn()">return</button>
       <div id="matrix" class="matrix">
         <div class="row legend">
           <div class="name cell legend">Name</div>
