fixed some stuff

--- a/bitcoinsafe.html
+++ b/bitcoinsafe.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="second-page" id="second-page" hidden>
-      <button id="return" onclick="handleReturn()">return</button>
+      <button id="restart" onclick="handleRestart()">restart</button>
       <div id="matrix" class="matrix">
         <div class="row legend">
           <div class="name cell legend">Name</div>
