--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -47,6 +47,16 @@
 
     <div class="second-page" id="second-page" hidden>
       <button id="restart" onclick="handleRestart()">restart</button>
+      <div id="profiles" class="profiles">
+        <div class="profile" id="JWWeatherman_">
+          <img src="reviewers/JWWeatherman_.jpg" class="profile-picture" />
+          <input type="checkbox" name="JWWeatherman_" />
+        </div>
+        <div class="profile" id="BenWestgate_">
+          <img src="reviewers/BenWestgate_.jpg" class="profile-picture" />
+          <input type="checkbox" name="BenWestgate_" />
+        </div>
+      </div>
       <div id="matrix" class="matrix">
         <div class="row legend">
           <div class="name cell legend">Name</div>
