--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
         <br>
         <div class="row">
-          <a href="bitcoinsafe.html" class="btn btn-default btn-block col-*-*" id="left-banner-button">Bitcoinsafe.com</a>
+          <a href="bitcoinsafe/bitcoinsafe.html" class="btn btn-default btn-block col-*-*" id="left-banner-button">Bitcoinsafe.com</a>
         </div>
         <br>
       </div>
