attempt to fix font

--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -11,7 +11,7 @@
   <div class="App">
     <script src="bitcoinsafe.js"></script>
     <div>
-      <div class="title">bitcoinSafe</div>
+      <div id="title">bitcoinSafe</div>
       <div id="theme">
         <button id="style1" onclick="swapStyleSheet('bitcoinsafelight.css')">
           light
