added comments and fixed stuff

--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -50,12 +50,24 @@
       <div id="profiles" class="profiles">
         <div class="profile" id="JWWeatherman_">
           <img src="reviewers/JWWeatherman_.jpg" class="profile-picture" />
+          JW Weatherman
           <input type="checkbox" name="JWWeatherman_" />
+        </div>
+        <div class="profile" id="Bob">
+          <img src="reviewers/Bob.jpg" class="profile-picture" />
+          Bob
+          <input type="checkbox" name="Bob" />
         </div>
         <div class="profile" id="BenWestgate_">
           <img src="reviewers/BenWestgate_.jpg" class="profile-picture" />
+          Ben Westgate
           <input type="checkbox" name="BenWestgate_" />
         </div>
+      </div>
+      <div class="control-panel">
+        <button class="control">A-Z</button>
+        <button class="control">Refresh</button>
+        <button class="control">Undo</button>
       </div>
       <div id="matrix" class="matrix">
         <div class="row legend">
@@ -72,8 +84,12 @@
           <div class="safesetup cell legend">Safe Setup</div>
           <div class="inheritancesafety cell legend">Inheritance Safety</div>
           <div class="spendspeed cell legend">Spend Speed</div>
-          <div class="comments cell legend">Comments</div>
+          <div class="easytosetup cell legend">Easy To Setup/Great UX</div>
         </div>
+      </div>
+      <div class="bottom">
+        <hr />
+        bitcoinSafe
       </div>
     </div>
   </div>
