added entries counter

--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -75,6 +75,7 @@
         </div>
       </div>
       <div class="control-panel">
+        <div id="entries" class="filters"></div>
         <button class="control" id="reload" onclick="handleReload()">
           Reload
         </button>
