--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -80,7 +80,7 @@
           Reload
         </button>
         <div class="filters">
-          Filters:&nbsp;
+          <div class="filters">Filters:&nbsp;</div>
           <button
             class="control"
             id="privacy-2"
