--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -15,6 +15,7 @@
     />
   </head>
   <body>
+    <script src="bitcoinsafe.js"></script>
     <div class="container-fluid">
       <div class="row bg-primary" style="height: 80px">
         <div class="col-lg-12 text-center text-white align-self-end" id="title">
