--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -31,7 +31,7 @@
         <div class="col-4"></div>
         <div class="col-4 my-auto">
           <label for="">HIGH SECURITY</label>
-          <input type="checkbox" id="toggle" onclick="handleToggle()" />
+          <input type="checkbox" id="toggle" onchange="handleToggle()" />
           <label for="">FAST SETUP</label>
         </div>
         <div class="col-4"></div>
