fixed raw data link

--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -140,7 +140,7 @@
       </div>
 
       <div class="row text-center align-content-center">
-        <div class="col-12" id="bottom">
+        <div class="col-2 offset-5" id="bottom">
           <a
             href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSDR-NwIbu4SrbJtvoR_rBQvW66t4FNaMO2yxv7xuXgisyLChxZHSRUGcBcDVkP5x1Up6up8NDGqxL9/pubhtml#"
             style="color: #181059"
