--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -44,7 +44,7 @@
       />
     </svg>
 
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color: #f6f5fa">
       <div
         class="row"
         style="height: 80px; background-color: rgb(246, 245, 250)"
