responsiveness step one

--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -55,7 +55,7 @@
       </div>
       <div
         class="row"
-        style="height: 80px; background-color: rgb(246, 245, 250)"
+        style="height: 25vh; background-color: rgb(246, 245, 250)"
       >
         <div class="col-4 offset-4 text center" id="description">
           Bitcoin Safe is a compilation of reviews by the top bitcoin security
@@ -66,7 +66,7 @@
 
       <div
         class="row"
-        style="height: 80px; background-color: rgb(246, 245, 250)"
+        style="background-color: rgb(246, 245, 250)"
         id="toggle-box"
       >
         <div class="col-4 offset-4 text-center">
