--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -55,7 +55,7 @@
       </div>
       <div
         class="row"
-        style="height: 15vh; background-color: rgb(246, 245, 250)"
+        style="height: min(25vw, 25vh); background-color: rgb(246, 245, 250)"
       >
         <div class="col-6 offset-3 text center" id="description">
           Bitcoin Safe is a compilation of reviews by the top bitcoin security
