--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -47,7 +47,7 @@
     <div class="container-fluid" style="background-color: #f6f5fa">
       <div
         class="row"
-        style="height: 80px; background-color: rgb(246, 245, 250)"
+        style="height: 10vh; background-color: rgb(246, 245, 250)"
       >
         <div class="col-lg-12 text-center align-self-end" id="title">
           Bitcoin Safe
