fixed link w zindex

--- a/bitcoinsafe/bitcoinsafe.html
+++ b/bitcoinsafe/bitcoinsafe.html
@@ -121,7 +121,7 @@
             <a
               href="https://docs.google.com/spreadsheets/d/e/2PACX-1vSDR-NwIbu4SrbJtvoR_rBQvW66t4FNaMO2yxv7xuXgisyLChxZHSRUGcBcDVkP5x1Up6up8NDGqxL9/pubhtml#"
               style="color: #181059"
-              >Go to Raw Data</a
+              >Raw Data</a
             >
           </li>
         </ul>
